<resources>
    <string name="app_name">Photos</string>
    
    <string name="downloads">downloads</string>
    <string name="tags">Tags:</string>
    <string name="comments">Comments</string>
    <string name="likes">likes</string>
    
    <string name="search_filter_default_value">fruits</string>
    <string name="search_view_hint">Search</string>
    
    <string name="error">Oops!\n A problem occurred!</string>
    <string name="oops">Oops!</string>
    <string name="general_error_msg">A problem occurred!\nPlease try again.</string>
    <string name="general_error_title">Oops.</string>
    <string name="retry">Retry</string>
    <string name="no_internet_error_msg">There was an error. Please check your internet connection and try again.</string>
    <string name="no_internet_error_title">No Internet Connection!</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="show_detail">Show Detail</string>
    <string name="open_detail">Do you want to go to the detail page?</string>
    <string name="cancel">Cancel</string>
    <string name="photo_detail">Photo Detail</string>
</resources>