<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data />
    
    <merge
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:fillViewport="true"
        tools:parentTag="android.widget.ScrollView">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            
            <ImageView
                android:id="@+id/error_image_view"
                android:layout_height="@dimen/error_icon_size"
                android:layout_marginTop="30dp"
                android:layout_width="@dimen/error_icon_size"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/ic_error" />
            
            <TextView
                style="@style/AppTheme.HeaderTextStyle"
                android:id="@+id/error_title"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="36dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/error_image_view"
                tools:text="@string/general_error_title" />
            
            <TextView
                style="@style/AppTheme.TextViewStyle"
                android:gravity="center"
                android:id="@+id/error_message"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/error_content_margin"
                android:layout_marginStart="@dimen/error_content_margin"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/error_title"
                tools:text="@string/general_error_msg" />
            
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/colorPrimaryDark"
                android:id="@+id/error_button"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:text="@string/retry"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/error_message"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/error_message"
                app:layout_constraintTop_toBottomOf="@+id/error_message"
                app:layout_constraintVertical_bias="0.029" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </merge>
</layout>